# LangChain-Rag

./: pyproject.toml
notebooks/: 01_Basic.ipynb  02_Document_Loaders.ipynb  02_Simple_RAG.ipynb  03_Text_Splitting_Strategies.ipynb  04_Embeddings_and_Vector_Representations.ipynb  06_Retrieval_Strategies.ipynb  08_External_Index_Retrievers.ipynb  10_RAG_Evaluation_with_Ragas.ipynb  11_RAG_Evaluation_with_LLM_Judge.ipynb  12_RAGAS_Metrics_Deep_Dive.ipynb  GDrive_Retriever.ipynb  Local_RAG_Ollama.ipynb  Naive_RAG.ipynb  Simple_RAG.ipynb  Vector_Stores_Tutorial.ipynb  working_gdrive_retriever.py
notebooks/grive-retriver-debugging/: debug_gdrive.py  reauth_gdrive.py  test_loader.py  test_retriever.py
notebooks/qdrant_ollama/collection/ollama_collection/: storage.sqlite
resources/: my_eval_dataset.csv
vectorstores/chroma_db/: chroma.sqlite3
vectorstores/faiss_index/: index.faiss  index.pkl
vectorstores/llm_judge_faiss/: index.faiss  index.pkl
vectorstores/qdrant_data/collection/my_collection_persistent/: storage.sqlite
vectorstores/qdrant_easy/collection/rag_collection/: storage.sqlite
vectorstores/qdrant_ollama/collection/ollama_collection/: storage.sqlite
vectorstores/ragas_evaluation_faiss/: index.faiss  index.pkl
