[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.0",
    "pypdf>=6.2.0",
]
