[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "arxiv>=2.3.1",
    "faiss-cpu>=1.12.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "ipykernel>=7.1.0",
    "jq>=1.10.0",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.1.0",
    "langchain-googledrive>=0.3.35",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-weaviate>=0.0.6",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "pypdf>=6.2.0",
    "qdrant-client>=1.16.0",
    "ragas>=0.3.7",
    "tavily-python>=0.7.13",
    "unstructured>=0.18.20",
    "weaviate-client>=4.18.1",
    "wikipedia>=1.4.0",
]
